simulator/src/test/resources/model_files/errors/duplicate_parameter.mdsl

# A model file that contains two definitions for the same parameter.
# This should throw an error.

initial tree {simulation}

species a contained simulation = 1 units
species b contained simulation = 1 units

parameter param1 = 1 units
parameter param1 = 1 units

a contained simulation modifier param1 => b contained simulation
